# supply-chain-optimization

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/hooks/: session-start.sh
data/: sample_pricing.csv
docs/: AGENT_UI_DESIGN_PROMPT.md  DEPLOYMENT.md  HANDOFF.md  README.md
documentation/: CAPABILITY_EXPANSION_PLAN.md  GETTING_STARTED.md  README.md  UI_DESIGN_BRIEF.md
examples/: build_excel_workbook.py  run_complete.py  run_connector_sim.py  run_new_capabilities.py  run_pricing_job.py  run_replenishment.py  run_whatif.py
excel-templates/: README.md  inventory-analysis.xlsx  run-complete.xlsx
jobs/: README.md  SAMPLE_PRICING_REPORT.md  data_quality_job.py  ddmrp_job.py  deliverables.py  facility_location_job.py  financial_kpis_job.py  forecast_job.py  inventory_optimization.py  multi_echelon_job.py  pricing.py  qa.py  reconciliation_job.py  returns_job.py  risk_job.py  sourcing_job.py  warehouse_job.py  whatif_job.py
scm_agent/: README.md  __init__.py  guided_bridge.py  knowledge.py  orchestrator.py  registry.py  tool_options.py  tools.py  types.py
scripts/: generate_pricing_sample.py
src/: __init__.py  alerting.py  classification.py  cycle_count.py  data_quality.py  ddmrp.py  ddmrp_decoupling.py  deliverable.py  excel_export.py  facility_location.py  financial_kpis.py  forecast_metrics.py  forecastability.py  forecasting.py  forecasting_auto.py  guided.py  landed_cost.py  multi_criteria_classification.py  multi_echelon.py  pricing.py  purchase_order.py  queuing.py  reconciliation.py  reverse_logistics.py  risk.py  safety_stock.py  scheduling.py  simulation.py  simulation_opt.py  space.py  supplier_scorecard.py  whatif.py  writeback.py
tests/: test_alerting.py  test_classification.py  test_connector_replenish.py  test_connectors.py  test_cycle_count.py  test_data_quality.py  test_data_quality_tool.py  test_ddmrp.py  test_ddmrp_decoupling.py  test_ddmrp_tool.py  test_deck_options.py  test_demo.py  test_excel_export.py  test_facility_location.py  test_facility_location_tool.py  test_financial_kpis.py  test_financial_kpis_tool.py  test_forecast_metrics.py  test_forecast_tool.py  test_forecastability.py  test_forecasting.py  test_guided.py  test_guided_bridge.py  test_guided_builders.py  test_intent_edges.py  test_inventory_deliverable.py  test_inventory_differentiation.py  test_jobs.py  test_knowledge.py  test_knowledge_warnings.py  test_landed_cost.py  test_multi_criteria_classification.py  test_multi_echelon.py  test_multi_echelon_tool.py  test_orchestrator_kb_warnings.py  test_pricing.py  test_purchase_order.py  test_queuing.py  test_reconciliation.py  test_reconciliation_tool.py  (+24 more)
webapp/: app.py  observability.py  requirements.txt  security.py
(+23 files in other folders)
